--- a/ResearchInterests.html
+++ b/ResearchInterests.html
@@ -6200,6 +6200,14 @@ function recaptchaOnload() {
  <li>Game design and Artificial Intelligence in Games&nbsp;</li> 
  <li>Geometric modeling&nbsp;</li> 
 </ul> 
+
+<p><u><strong>Obtained Research/Teaching Grants</strong></u></p> 
+<ul> 
+ <li>Main applicant, Linnaeus-Palme Planning Grant with IIT Mandi (2021-2022)</li>
+ <li>Co-applicant, Theme Leader, Subproject Leader in Human-Centered Intelligent Realities (HINTS), KKS Profile (2022-2028)</li>
+</ul>
+
+
 <p><br> I am always open to experiment on new and exciting topics. I have co-supervised PhD students on traffic data analysis and eHealth.</p> 
 <p><u><strong>Publications</strong></u></p> 
 <p>My updated list of publications is&nbsp;<a data-linkto="{&quot;type&quot;:&quot;Page&quot;,&quot;src&quot;:&quot;publications&quot;,&quot;pageId&quot;:&quot;245409&quot;,&quot;inNewWin&quot;:false}" href="Publications.html"><span class="fgColor" style="color:#0026fd;">here</span></a>.</p> 
