--- a/ResearchInterests.html
+++ b/ResearchInterests.html
@@ -6203,10 +6203,11 @@ function recaptchaOnload() {
 <p><br> I am always open to experiment on new and exciting topics. I have co-supervised PhD students on traffic data analysis and eHealth.</p> 
 <br>
 
-<p><u><strong>Obtained Research/Teaching Grants</strong></u></p> 
+<p><u><strong>Research/Teaching Grants</strong></u></p> 
 <ul> 
- <li>Main applicant, Linnaeus-Palme Planning Grant with IIT Mandi (2021-2022)</li>
- <li>Co-applicant, Theme Leader, Subproject Leader in Human-Centered Intelligent Realities (HINTS), KKS Profile (2022-2028)</li>
+ <li>Main applicant, Linnaeus-Palme Planning Grant with Shubhajit Roy Chowdhury (IIT Mandi) (2021-2022)</li>
+ <li>Co-applicant, Theme Leader, Subproject Leader in Human-Centered Intelligent Realities (HINTS) by Veronica Sundstedt, KKS Profile (2022-2028)</li>
+ <li>Reference Group in PREDICT - Failure prediction for complex load cases by Shafiqul Islam, KKS Prospect (2021-2023) </li>
 </ul>
 <br>
 
