--- a/index.html
+++ b/index.html
@@ -6318,12 +6318,21 @@ function recaptchaOnload() {
 	        </div>
 			
 		</div>
-	</div>
-
-
-	
+	</div>	
 </div>
 <br><br><br><br><br><br><br><br>
+	<footer>
+	    <div id="footer-body" class="section">
+	    	<div class="container">
+	        	<div id="footer-wrapper" class="container-wrapper">
+					<div id="el-64221" class="element socialLinkBar-element  ">
+
+		        </div>
+		    </div>
+			
+		</div>
+		
+	</footer>
 
 <!-- Default Statcounter code for Homepage https://prashantgos.github.io/ -->
 <script type="text/javascript">
