--- a/Publications.html
+++ b/Publications.html
@@ -6427,6 +6427,30 @@ function recaptchaOnload() {
 					<div id="el-124107" class="element text-element  "> 
 		<div class="text-content"><h3><strong>Publications</strong></h3>  <br>
 		
+		
+		
+<h2 style="padding-left:25px;"><strong>2023</strong></h2> 
+<ul style="list-style: none; line-height: 120%">
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Frontiers23.png"/>
+						<b>Interactive landscape–scale cloud animation using DCGAN</b>
+						<br/>
+						Prashant Goswami*, Abbas Cheddad*, Fredrik Junede, Samuel Asp (* equal contribution)
+						<br/><i>Frontiers in Computer Science (Computer Graphics and Visualization), Vol. 5</i>, 2023 <br/>
+						<a href="https://doi.org/10.3389/fcomp.2023.957920" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://ardisdataset.github.io/Cloud/" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/icord23.png"/>
+						<b>Design of Artificial Intelligence-based products: Barriers and Enablers</b>
+						<br/>
+						 Santosh Jagtap, Prashant Goswami 
+						<br/><i>Proceedings of the 9th International Conference on Research Into Design (iCord'23), To Appear,</i> 2023 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						
+						<br/><br/><br/><br/><br/>
+				</li>
+</ul>
+		
 <h2 style="padding-left:25px;"><strong>2022</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
 <li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/House3_EGPGV22.png"/>
