--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6214,7 +6214,14 @@ function recaptchaOnload() {
 
 <p>&nbsp;</p>
 
-<p>I have reviewed papers for the following journals / conferences :</p>
+<p>I have reviewed book for the following publishers:</p>
+<ul>
+	<li>Bentham Manuscript</li>
+</ul>
+
+<p>&nbsp;</p>
+
+<p>I have reviewed papers for the following journals / conferences:</p>
 
 <ul>
 	<li>ACM SIGGRAPH Asia</li>
