--- a/Publications.html
+++ b/Publications.html
@@ -6436,7 +6436,7 @@ function recaptchaOnload() {
 						<br/>
 						Prashant Goswami*, Abbas Cheddad*, Fredrik Junede, Samuel Asp (* equal contribution)
 						<br/><i>Frontiers in Computer Science (Computer Graphics and Visualization), Vol. 5</i>, 2023 <br/>
-						<a href="https://doi.org/10.3389/fcomp.2023.957920" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="http://bth.diva-portal.org/smash/get/diva2:1741993/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://ardisdataset.github.io/Cloud/" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
