--- a/Supervision.html
+++ b/Supervision.html
@@ -6201,7 +6201,13 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Master thesis:</span></h3> 
 <p><u>Current:</u></p> 
 <ul> 
- <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nadhif Ginola </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nadhif Ginola @ AMD </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Anthony Sandesh Reddy Komareddy @ Ericsson </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Abhinav Chitta @ Ericsson </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Venkata Vamsi Challa @ Ericsson </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Sai Swaroop Rachakonda @ Ericsson </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Siddharth Reddy Aleti &amp; Karthik Kurakula </font></font></li>
+
 
 
 </ul> 
@@ -6298,7 +6304,8 @@ function recaptchaOnload() {
 
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
