--- a/Supervision.html
+++ b/Supervision.html
@@ -6255,9 +6255,17 @@ function recaptchaOnload() {
 <p><u>Current:</u></p> 
 <ul> 
 
-	
-<!--	<li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nikhitha Priyadarsini Seelam &amp; Venkata Siva Sai Kumar Palisetti </font></font></li> -->
-
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Klara Andersson	&amp; Erik Landen</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Simon Strand	&amp; Karlos Napa Häger</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">William Kamnert</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Obi Reddy Kanchi Reddy Gari &amp;	Nithin Krishna Vadde</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Banoday Shiridinadh Reddy Panguru	&amp; Hemendranath Chowdary Madhineni</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Narendra Velpula	&amp; Dinesh Kotti</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Prashuna Sai Surya Vishwitha Domadula &amp;	Sai Sumanwita Sayyaparaju</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Samanth Malepati &amp;	Srilekha Pothuganti</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Mahidhar Reddy Vaka	&amp; Vaishnavi Walajapet Bhakthavathsalam</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Morgan Westerberg &amp;	Oliver Olguin Jönsson</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Raahitya Botta &amp;	Aditya Aditya</font></font></li>
 
 
 
@@ -6305,7 +6313,7 @@ function recaptchaOnload() {
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
