--- a/Supervision.html
+++ b/Supervision.html
@@ -6266,6 +6266,8 @@ function recaptchaOnload() {
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Mahidhar Reddy Vaka	&amp; Vaishnavi Walajapet Bhakthavathsalam</font></font></li>
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Morgan Westerberg &amp;	Oliver Olguin Jönsson</font></font></li>
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Raahitya Botta &amp;	Aditya Aditya</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Raahitya Botta &amp;	Oliver Klingspor</font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Raahitya Botta &amp;	Viktor Norlund</font></font></li>
 
 
 
