--- a/Supervision.html
+++ b/Supervision.html
@@ -6201,7 +6201,7 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Master thesis:</span></h3> 
 <p><u>Current (2023):</u></p> 
 <ul> 
- <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Simon Andreasson \& Linus Östergaard </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Simon Andreasson &amp; Linus Östergaard </font></font></li>
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nadhif Ginola @ AMD </font></font></li>
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Anthony Sandesh Reddy Komareddy @ Ericsson </font></font></li>
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Abhinav Chitta @ Ericsson </font></font></li>
