--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6226,6 +6226,7 @@ function recaptchaOnload() {
 <ul>
 	<li>ACM SIGGRAPH Asia</li>
 	<li>IEEE Transactions on Visualization and Computer Graphics Journal</li>
+	<li>IEEE Visualization</li>
 	<li>Computer Graphics Forum Journal</li>
 	<li>ACM Transactions on Applied Perception Journal</li>
 	<li>Computers and Graphics Journal</li>
