--- a/Publications.html
+++ b/Publications.html
@@ -6444,8 +6444,17 @@ function recaptchaOnload() {
 						<b>Design of Artificial Intelligence-based products: Barriers and Enablers</b>
 						<br/>
 						 Santosh Jagtap, Prashant Goswami 
-						<br/><i>Proceedings of the 9th International Conference on Research Into Design (iCord'23), To Appear,</i> 2023 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><i>Book Chapter, Proceedings of the 9th International Conference on Research Into Design (iCord'23), To Appear,</i> 2023 <br/>
+						<a href="https://link.springer.com/chapter/10.1007/978-981-99-0428-0_53" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						
+						<br/><br/><br/><br/><br/>
+				</li>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/HINTS_SAIS23"/>
+						<b>HINTS: Human-Centered Intelligent Realities</b>
+						<br/>
+						 Veronica Sundstedt, Veselka Boeva, Hans-Jürgen Zepernick, Prashant Goswami, Abbas Cheddad, Kurt Tutschku, Håkan Grahn, Emiliano Casalicchio, Markus Fiedler, Emilia Mendes, Shahrooz Abghari, Yan Hu, Valeria Garro, Thi My Chinh Chu, Lars Lundberg, Patrik Arlos 
+						<br/><i>Proceedings of the 35th Swedish Artificial Intelligence Society, pp. 9-17,</i> 2023 <br/>
+						<a href="Publications_files/paper_SAIS_2023" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
 				</li>
@@ -6843,7 +6852,7 @@ function recaptchaOnload() {
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
