--- a/Publications.html
+++ b/Publications.html
@@ -6449,12 +6449,12 @@ function recaptchaOnload() {
 						
 						<br/><br/><br/><br/><br/>
 				</li>
-				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/HINTS_SAIS23"/>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/HINTS_SAIS23.png"/>
 						<b>HINTS: Human-Centered Intelligent Realities</b>
 						<br/>
 						 Veronica Sundstedt, Veselka Boeva, Hans-Jürgen Zepernick, Prashant Goswami, Abbas Cheddad, Kurt Tutschku, Håkan Grahn, Emiliano Casalicchio, Markus Fiedler, Emilia Mendes, Shahrooz Abghari, Yan Hu, Valeria Garro, Thi My Chinh Chu, Lars Lundberg, Patrik Arlos 
 						<br/><i>Proceedings of the 35th Swedish Artificial Intelligence Society, pp. 9-17,</i> 2023 <br/>
-						<a href="Publications_files/paper_SAIS_2023" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://ecp.ep.liu.se/index.php/sais/article/download/713/619/731" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
 				</li>
