--- a/Publications.html
+++ b/Publications.html
@@ -6431,7 +6431,16 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2023</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
-<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Frontiers23.png"/>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/IPTA_2023.png"/>
+						<b>Animated lightning bolt generation using machine learning</b>
+						<br/>
+						Prashant Goswami, Henrik Johansson, Abbas Cheddad
+						<br/><i>Accepted as Full Paper at International Conference on Image Processing Theory, Tools and Applications (IPTA)</i>, 2023 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://www.youtube.com/watch?v=DIy2nHu5_PE" target="_blank">[<font color="#0547f6">Video</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Frontiers23.png"/>
 						<b>Interactive landscape–scale cloud animation using DCGAN</b>
 						<br/>
 						Prashant Goswami*, Abbas Cheddad*, Fredrik Junede, Samuel Asp (* equal contribution)
