--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6196,7 +6196,7 @@ function recaptchaOnload() {
 
 <p>&nbsp;</p>
 
-<p>I am serving/have served&nbsp;in&nbsp;the international Technical Program Committee for</p>
+<p>I am serving/have served&nbsp;in&nbsp;the international Technical Program Committee for the following conferences:</p>
 
 <ul>
 	<li>Computer Graphics Theory and Applications (GRAPP) 2024 (Rome, Italy)</li>
@@ -6224,7 +6224,7 @@ function recaptchaOnload() {
 
 <p>&nbsp;</p>
 
-<p>I have reviewed papers for the following journals / conferences:</p>
+<p>I have reviewed papers for the following journals/conferences:</p>
 
 <ul>
 	<li>ACM SIGGRAPH Asia</li>
