--- a/Publications.html
+++ b/Publications.html
@@ -6453,7 +6453,7 @@ function recaptchaOnload() {
 						<b>Design of Artificial Intelligence-based products: Barriers and Enablers</b>
 						<br/>
 						 Santosh Jagtap, Prashant Goswami 
-						<br/><i>Book Chapter, Design in the Era of Industry 4.0, Volume 3, Proceedings of the 9th International Conference on Research Into Design (iCord'23), pp.647-658,</i> 2023 <br/>
+						<br/><i>Book Chapter, Springer, Design in the Era of Industry 4.0, Volume 3, Proceedings of the 9th International Conference on Research Into Design (iCord'23), pp.647-658,</i> 2023 <br/>
 						<a href="https://link.springer.com/chapter/10.1007/978-981-99-0428-0_53" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
