--- a/Teaching.html
+++ b/Teaching.html
@@ -6221,8 +6221,7 @@ function recaptchaOnload() {
 <p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2020&nbsp; (Head-Examiner)</p>
 <p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2019&nbsp; (Head-Examiner)</p>
 <p>&nbsp;</p> 
-<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2022  (Examiner, Course responsible) (Course evaluation: -)</p> 
-<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2021  (Examiner, Course responsible) (Course evaluation: -)</p> 
+<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2023  (Examiner, Course responsible) (Course evaluation: 3.3/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2022  (Examiner, Course responsible) (Course evaluation: 3.4/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2021  (Examiner, Course responsible) (Course evaluation: 3.3/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2020  (Examiner, Course responsible) (Course evaluation: 3.5/4.0)</p> 
@@ -6230,6 +6229,9 @@ function recaptchaOnload() {
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2018 (Examiner, Course responsible) (Course evaluation: 3.7/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2017 (Examiner, Course responsible) (Course evaluation: 2.6/4.0)</p> 
 <p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2016(Examiner)</p> 
+<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2023  (Examiner, Course responsible) (Course evaluation: -)</p> 
+<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2022  (Examiner, Course responsible) (Course evaluation: -)</p> 
+<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2021  (Examiner, Course responsible) (Course evaluation: -)</p> 
 <p>&nbsp;</p> 
 <p>My previous teaching page at INRIA, UJF is&nbsp;<span class="fgColor" style="color:#0054f7;"><a data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;http://maverick.inria.fr/~Prashant.Goswami/index.html&quot;,&quot;inNewWin&quot;:false}" href="http://maverick.inria.fr/~Prashant.Goswami/index.html">here</a></span>. I taught a Master level course on "Reconstruction and Geometric Algorithm" at University of Joseph Fourier, Grenoble.</p></div>
 		</div> 
