--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6200,6 +6200,7 @@ function recaptchaOnload() {
 
 <ul>
 	<li>Computer Graphics Theory and Applications (GRAPP) 2024 (Rome, Italy)</li>
+	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2023 (Bridgetown, Barbados)</li>
 	<li>Smart Tools and Applications in Graphics(STAG) 2023 (Matera, Italy)</li>
 	<li>Applications and Systems of Visual Paradigms (VISUAL, IARIA) 2023 (Barcelona, Spain)</li>
 	<li>Smart Tools and Applications in Graphics (STAG) 2022 (Cagliari, Italy)</li>
