--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -1,29 +1,57 @@
-<p>Approaching submission conference venues by fields:</p>
+<p>Approaching submission conference venues by fields and submission deadlines:</p>
 
 <p>&nbsp;</p>
 
-<p><strong>Computer Graphics (CG)</strong></p>
+<p><span style="color:#e67e22"><strong>Computer Graphics (CG)</strong></span></p>
 
-<p>-- Eurographics 2024&nbsp;</p>
+<p>-- Eurographics (EG) 2024&nbsp;</p>
 
 <p><a href="https://eg2024.cyens.org.cy/">https://eg2024.cyens.org.cy/</a></p>
 
-<p>Oct 5, 2023 (Full papers with abstract submission on Sep 28)</p>
+<p>Oct 5, 2023 (Full papers with abstract submission by Sep 28)</p>
 
 <p>Oct _, 2023 (State of the art report)</p>
 
 <p>Oct _, 2023 (Short papers)</p>
 
+<p>-- Eurographics Symposium on Parallel Graphics and Visualization (EGPGV) 2024</p>
+
+<p><a href="https://www.egpgv.org/2023/">https://www.egpgv.org/2023/</a></p>
+
+<p>Dec _, 2023 (Full paper with FIRST call for abstract submission by Dec _)</p>
+
+<p>Mar _, 2024 (Full paper with FIRST call for abstract submission by Mar _)</p>
+
+<p>-- High Performance Graphics (HPG) 2024</p>
+
+<p><a href="https://www.highperformancegraphics.org/2023/call-for-participation/">https://www.highperformancegraphics.org/2023/call-for-participation/</a></p>
+
+<p>Apr _, 2024 expected (Full papers with abstract submission by Apr _, 2024)</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p><span style="color:#2980b9"><strong>Visualization</strong></span></p>
+
 <p>--&nbsp;</p>
 
-<p><strong>Visualization</strong></p>
+<p>&nbsp;</p>
 
-<p>--</p>
+<p>&nbsp;</p>
 
-<p><strong>AR, VR, Mixed Reality&nbsp;</strong></p>
+<p><span style="color:#c0392b"><strong>AR, VR, Mixed Reality&nbsp;</strong></span></p>
 
-<p>-- ICAT-EGVE:&nbsp;<a href="https://icat-egve-2023.org/cfp.html" id="LPlnk949806" rel="noopener noreferrer" target="_blank">https://icat-egve-2023.org/cfp.html</a></p>
+<p>-- ICAT-EGVE</p>
 
-<p><strong>Artificial Intelligence (AI)</strong></p>
+<p><a href="https://icat-egve-2023.org/cfp.html" id="LPlnk949806" rel="noopener noreferrer" target="_blank">https://icat-egve-2023.org/cfp.html</a></p>
+
+<p>Sep 15, 2023 (Full paper)</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p><span style="color:#27ae60"><strong>Artificial Intelligence (AI)</strong></span></p>
 
 <p>--&nbsp;</p>
