--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -40,7 +40,7 @@
 
 <p>&nbsp;</p>
 
-<p><span style="color:#c0392b"><strong>AR, VR, Mixed Reality&nbsp;</strong></span></p>
+<p><span style="color:#c0392b"><strong>Visual Perception, AR, VR, Mixed Reality&nbsp;</strong></span></p>
 
 <p>-- ICAT-EGVE</p>
 
