--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -4,31 +4,91 @@
 
 <p><span style="color:#e67e22"><strong>Computer Graphics (CG)</strong></span></p>
 
-<p>-- Eurographics (EG) 2024&nbsp;</p>
+<ul>
+	<li>&nbsp;Eurographics (EG) 2024&nbsp;</li>
+</ul>
 
-<p><a href="https://eg2024.cyens.org.cy/">https://eg2024.cyens.org.cy/</a></p>
+<p style="margin-left:40px"><a href="https://eg2024.cyens.org.cy/">https://eg2024.cyens.org.cy/</a></p>
 
-<p>Oct 5, 2023 (Full papers with abstract submission by Sep 28)</p>
+<p style="margin-left:40px">Oct 5, 2023 (Full papers with abstract submission by Sep 28)</p>
 
-<p>Oct _, 2023 (State of the art report)</p>
+<p style="margin-left:40px">Oct _, 2023 (State of the art report)</p>
 
-<p>Oct _, 2023 (Short papers)</p>
+<p style="margin-left:40px">Oct _, 2023 (Short papers)</p>
 
-<p>-- Eurographics Symposium on Parallel Graphics and Visualization (EGPGV) 2024</p>
+<ul>
+	<li>Smart Tools and Applications in Graphics (STAG)</li>
+</ul>
 
-<p><a href="https://www.egpgv.org/2023/">https://www.egpgv.org/2023/</a></p>
+<p style="margin-left:40px"><a href="https://www.stag-conference.org/2023/">https://www.stag-conference.org/2023/</a></p>
 
-<p>Dec _, 2023 (Full paper with FIRST call for abstract submission by Dec _)</p>
+<p style="margin-left:40px">Sep 17, 2023 (Full papers with FIRST call for abstract submission by Sep 10, 2023)</p>
 
-<p>Mar _, 2024 (Full paper with FIRST call for abstract submission by Mar _)</p>
+<ul>
+	<li>Conference on Computer Graphics Theory and Applications (GRAPP)</li>
+</ul>
 
-<p>-- High Performance Graphics (HPG) 2024</p>
+<p style="margin-left:40px"><a href="https://grapp.scitevents.org/">https://grapp.scitevents.org/</a></p>
 
-<p><a href="https://www.highperformancegraphics.org/2023/call-for-participation/">https://www.highperformancegraphics.org/2023/call-for-participation/</a></p>
+<p style="margin-left:40px">Oct 9, 2023 (Full papers)</p>
 
-<p>Apr _, 2024 expected (Full papers with abstract submission by Apr _, 2024)</p>
+<ul>
+	<li>Eurographics Symposium on Parallel Graphics and Visualization (EGPGV) 2024</li>
+</ul>
 
-<p>&nbsp;</p>
+<p style="margin-left:40px"><a href="https://www.egpgv.org/2023/">https://www.egpgv.org/2023/</a></p>
+
+<p style="margin-left:40px">Dec _, 2023 (Full papers with FIRST call for abstract submission by Dec _)</p>
+
+<p style="margin-left:40px">Mar _, 2024 (Full papers with SECOND call for abstract submission by Mar _)</p>
+
+<ul>
+	<li>SIGGRAPH&nbsp;</li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://s2023.siggraph.org/">https://s2023.siggraph.org/</a></p>
+
+<p style="margin-left:40px">Jan_, 2024&nbsp;(Full papers with abstract submission by Jan_, 2024)</p>
+
+<ul>
+	<li>&nbsp;High Performance Graphics (HPG) 2024</li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://www.highperformancegraphics.org/2023/call-for-participation/">https://www.highperformancegraphics.org/2023/call-for-participation/</a></p>
+
+<p style="margin-left:40px">Apr _, 2024 expected (Full papers with abstract submission by Apr _, 2024)</p>
+
+<ul>
+	<li>Eurographics Symposium on Rendering (EGSR) 2024</li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://conferences.eg.org/egsr2023/">https://conferences.eg.org/egsr2023/</a></p>
+
+<p style="margin-left:40px">Apr _, 2024 expected (Full papers with abstract submission by Apr _, 2024)</p>
+
+<ul>
+	<li>SIGGRAPH Asia</li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://asia.siggraph.org/2023/">https://asia.siggraph.org/2023/</a></p>
+
+<p style="margin-left:40px">May _, 2024 expected (Full papers with abstract submission by May _, 2024)</p>
+
+<ul>
+	<li>Symposium on Computer Animation (SCA)</li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://computeranimation.org/">https://computeranimation.org/</a></p>
+
+<p style="margin-left:40px">May _, 2024 expected (Full papers with abstract submission by May _, 2024)</p>
+
+<ul>
+	<li>&nbsp;Pacific Graphics (PG) 2024</li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://pg2023.org/">https://pg2023.org/</a></p>
+
+<p style="margin-left:40px">Jun _, 2024 expected (Full papers with abstract submission by Jun _, 2024)</p>
 
 <p>&nbsp;</p>
 
@@ -40,7 +100,7 @@
 
 <p>&nbsp;</p>
 
-<p><span style="color:#c0392b"><strong>Visual Perception, AR, VR, Mixed Reality&nbsp;</strong></span></p>
+<p><span style="color:#c0392b"><strong>AR, VR, Mixed Reality&nbsp;</strong></span></p>
 
 <p>-- ICAT-EGVE</p>
 
