--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -17,7 +17,7 @@
 <p style="margin-left:40px">Oct _, 2023 (Short papers)</p>
 
 <ul>
-	<li>Smart Tools and Applications in Graphics (STAG)</li>
+	<li>Smart Tools and Applications in Graphics (STAG) 2023</li>
 </ul>
 
 <p style="margin-left:40px"><a href="https://www.stag-conference.org/2023/">https://www.stag-conference.org/2023/</a></p>
@@ -25,7 +25,7 @@
 <p style="margin-left:40px">Sep 17, 2023 (Full papers with FIRST call for abstract submission by Sep 10, 2023)</p>
 
 <ul>
-	<li>Conference on Computer Graphics Theory and Applications (GRAPP)</li>
+	<li>Conference on Computer Graphics Theory and Applications (GRAPP) 2024</li>
 </ul>
 
 <p style="margin-left:40px"><a href="https://grapp.scitevents.org/">https://grapp.scitevents.org/</a></p>
@@ -43,7 +43,7 @@
 <p style="margin-left:40px">Mar _, 2024 (Full papers with SECOND call for abstract submission by Mar _)</p>
 
 <ul>
-	<li>SIGGRAPH&nbsp;</li>
+	<li>SIGGRAPH 2024</li>
 </ul>
 
 <p style="margin-left:40px"><a href="https://s2023.siggraph.org/">https://s2023.siggraph.org/</a></p>
@@ -67,7 +67,7 @@
 <p style="margin-left:40px">Apr _, 2024 expected (Full papers with abstract submission by Apr _, 2024)</p>
 
 <ul>
-	<li>SIGGRAPH Asia</li>
+	<li>SIGGRAPH Asia 2024</li>
 </ul>
 
 <p style="margin-left:40px"><a href="https://asia.siggraph.org/2023/">https://asia.siggraph.org/2023/</a></p>
@@ -75,7 +75,7 @@
 <p style="margin-left:40px">May _, 2024 expected (Full papers with abstract submission by May _, 2024)</p>
 
 <ul>
-	<li>Symposium on Computer Animation (SCA)</li>
+	<li>Symposium on Computer Animation (SCA) 2024</li>
 </ul>
 
 <p style="margin-left:40px"><a href="https://computeranimation.org/">https://computeranimation.org/</a></p>
@@ -102,7 +102,7 @@
 
 <p><span style="color:#c0392b"><strong>AR, VR, Mixed Reality&nbsp;</strong></span></p>
 
-<p>-- ICAT-EGVE</p>
+<p>-- ICAT-EGVE 2023</p>
 
 <p><a href="https://icat-egve-2023.org/cfp.html" id="LPlnk949806" rel="noopener noreferrer" target="_blank">https://icat-egve-2023.org/cfp.html</a></p>
 
