--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -2,7 +2,9 @@
 
 <p>&nbsp;</p>
 
-<p><span style="color:#e67e22"><strong>Computer Graphics (CG)</strong></span></p>
+<p><span style="color:#e67e22"><strong>COMPUTER GRAPHICS (CG)</strong></span></p>
+
+<p><span style="color:#e67e22"><strong>Conferences</strong></span></p>
 
 <ul>
 	<li>&nbsp;Eurographics (EG) 2024&nbsp;</li>
@@ -12,9 +14,9 @@
 
 <p style="margin-left:40px">Oct 5, 2023 (Full papers with abstract submission by Sep 28)</p>
 
-<p style="margin-left:40px">Oct _, 2023 (State of the art report)</p>
+<p style="margin-left:40px">Oct 27, 2023 (State-of-the-art report with abstract submission by Oct 13)</p>
 
-<p style="margin-left:40px">Oct _, 2023 (Short papers)</p>
+<p style="margin-left:40px">Jan 5, 2024 (Short papers)</p>
 
 <ul>
 	<li>Smart Tools and Applications in Graphics (STAG) 2023</li>
@@ -89,6 +91,44 @@
 <p style="margin-left:40px"><a href="https://pg2023.org/">https://pg2023.org/</a></p>
 
 <p style="margin-left:40px">Jun _, 2024 expected (Full papers with abstract submission by Jun _, 2024)</p>
+
+<p><span style="color:#e67e22"><strong>Journals</strong></span></p>
+
+<ul>
+	<li><span style="color:#000000">ACM Transactions on Graphics&nbsp;</span></li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://dl.acm.org/journal/tog">https://dl.acm.org/journal/tog</a></p>
+
+<ul>
+	<li><span style="color:#000000">IEEE Transactions on Computer Graphics and Visualization</span></li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=2945">https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=2945</a></p>
+
+<ul>
+	<li><span style="color:#000000">Computer Graphics Forum</span></li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://onlinelibrary.wiley.com/journal/14678659">https://onlinelibrary.wiley.com/journal/14678659</a></p>
+
+<ul>
+	<li><span style="color:#000000">The Visual Computer</span></li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://www.springer.com/journal/371">https://www.springer.com/journal/371</a></p>
+
+<ul>
+	<li><span style="color:#000000">Computers &amp; Graphics</span></li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://www.sciencedirect.com/journal/computers-and-graphics">https://www.sciencedirect.com/journal/computers-and-graphics</a></p>
+
+<ul>
+	<li><span style="color:#000000">Computer Animation and Virtual Worlds</span></li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://onlinelibrary.wiley.com/journal/1546427x">https://onlinelibrary.wiley.com/journal/1546427x</a></p>
 
 <p>&nbsp;</p>
 
