--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -140,15 +140,23 @@
 
 <p>&nbsp;</p>
 
-<p><span style="color:#c0392b"><strong>AR, VR, Mixed Reality&nbsp;</strong></span></p>
+<p><span style="color:#c0392b"><strong>Perception, AR/VR/MR&nbsp;</strong></span></p>
 
-<p>-- ICAT-EGVE 2023</p>
+<ul>
+	<li>ICAT-EGVE 2023</li>
+</ul>
 
-<p><a href="https://icat-egve-2023.org/cfp.html" id="LPlnk949806" rel="noopener noreferrer" target="_blank">https://icat-egve-2023.org/cfp.html</a></p>
+<p style="margin-left:40px"><a href="https://icat-egve-2023.org/cfp.html" id="LPlnk949806" rel="noopener noreferrer" target="_blank">https://icat-egve-2023.org/cfp.html</a></p>
 
-<p>Sep 15, 2023 (Full paper)</p>
+<p style="margin-left:40px">Sep 15, 2023 (Full paper)</p>
 
-<p>&nbsp;</p>
+<ul>
+	<li>IEEE VR 2024</li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://ieeevr.org/2024/contribute/papers/">https://ieeevr.org/2024/contribute/papers/</a></p>
+
+<p style="margin-left:40px">Oct 4, 2023 (Full paper with abstract due on Sep 27)</p>
 
 <p>&nbsp;</p>
 
