--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -19,6 +19,14 @@
 <p style="margin-left:40px">Jan 5, 2024 (Short papers)</p>
 
 <ul>
+	<li>Eurographics Workshop on Graphics and Cultural Heritage 2023</li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://www.gch2023.eu/">https://www.gch2023.eu/</a></p>
+
+<p style="margin-left:40px">Apr 30, 2023 (Full &amp; Short papers)</p>
+
+<ul>
 	<li>Smart Tools and Applications in Graphics (STAG) 2023</li>
 </ul>
 
