--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -240,38 +240,38 @@
 
 <p><span style="font-size:14px"><strong><span style="color:#27ae60"><span style="font-family:Arial,Helvetica,sans-serif">Journals</span></span></strong></span></p>
 
-<pre>
-<span style="font-family:Arial,Helvetica,sans-serif">Artificial Intelligence
-IEEE Transactions on Image Processing
-IEEE Transactions on Neural Networks and Learning Systems (was IEEE Transactions on Neural Networks)
-IEEE Transactions on Pattern Analysis and Machine Intelligence
-Machine Learning
-Pattern Recognition
-Computational Intelligence
-Computer Vision and Image Understanding
-Data Mining and Knowledge Discovery
-IEEE Intelligent Systems
-IEEE Transactions on Knowledge and Data Engineering
-International Journal of Computational Intelligence and Applications
-International Journal of Computer Vision
-Journal of Artificial Intelligence Research
-Journal of Machine Learning Research
-Minds and Machines: journal for artificial intelligence, philosophy and cognitive sciences
-Neural Computation
-Neural Networks
-ACM Transactions on Knowledge Discovery from Data
-AI Communications: the European journal on artificial intelligence
-Applied Artificial Intelligence: an international journal
-Applied Intelligence
-Australian Journal of Intelligent Information Processing Systems
-Engineering Applications of Artificial Intelligence
-Expert Systems with Applications
-IET Computer Vision
-Image and Vision Computing
-Information Retrieval
-Intelligent Data Analysis
-International Journal of Pattern Recognition and Artificial Intelligence
-Journal of Intelligent Systems
-Machine Vision and Applications: an international journal
-Neurocomputing
-Pattern Recognition Letters</span></pre>
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Artificial Intelligence</span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE Transactions on Image Processing </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE Transactions on Neural Networks and Learning Systems (was IEEE Transactions on Neural Networks) </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE Transactions on Pattern Analysis and Machine Intelligence </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Machine Learning </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Pattern Recognition </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Computational Intelligence </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Computer Vision and Image Understanding </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Data Mining and Knowledge Discovery </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE Intelligent Systems </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE Transactions on Knowledge and Data Engineering </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">International Journal of Computational Intelligence and Applications </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">International Journal of Computer Vision Journal of Artificial Intelligence Research </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Journal of Machine Learning Research </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Minds and Machines: journal for artificial intelligence, philosophy and cognitive sciences </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Neural Computation </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Neural Networks </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">ACM Transactions on Knowledge Discovery from Data </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">AI Communications: the European journal on artificial intelligence </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Applied Artificial Intelligence: an international journal </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Applied Intelligence </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Australian Journal of Intelligent Information Processing Systems </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Engineering Applications of Artificial Intelligence </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Expert Systems with Applications </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IET Computer Vision </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Image and Vision Computing </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Information Retrieval </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Intelligent Data Analysis </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">International Journal of Pattern Recognition and Artificial Intelligence </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Journal of Intelligent Systems </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Machine Vision and Applications: an international journal </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Neurocomputing </span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Pattern Recognition Letters</span></li>
+</ul>
